# py_auto_course

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  run_all.sh
.github/workflows/: auto_assign.yml  flake8.yaml  mypy.yaml  pr_check_name.yaml  pylint.yaml  ruff.yaml  test_homework.yml
config/: tasks.json
homeworks/hw5/: hw5_solution.py
homeworks/hw6/: hw6_solution.py
tests/: test_hw10.py  test_hw11.py  test_hw12.py  test_hw13.py  test_hw14.py  test_hw29.py  test_hw5.py  test_hw6.py  test_hw7.py  test_hw8.py  test_hw9.py
